--- a/SpringBootV2.7.18/src/main/resources/templates/entity.java.vm
+++ b/SpringBootV2.7.18/src/main/resources/templates/entity.java.vm
@@ -3,6 +3,7 @@ package ${package.Entity};
 #foreach($pkg in ${table.importPackages})
 import ${pkg};
 #end
+import com.baomidou.mybatisplus.annotation.TableName;
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
 
